--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,229 @@
+/* Variables */
+:root {
+  --primary: #fff;
+  --secondary: #f9f9f9;
+  --border: rgba(0, 0, 0, 0.08);
+  --color: #2c2c2c;
+  --table-border: black;
+  --table-border-secondary: #2c2c2c;
+}
+
+[data-theme="dark"] {
+  --primary: #1f1f1f;
+  --secondary: #181818;
+  --border: #2a2a2a;
+  --color: #cccccc;
+  --table-border: #cccccc;
+  --table-border-secondary: #cccccc;
+}
+
+body {
+  margin: 0;
+  background-color: var(--primary);
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
 .App {
+  background-color: var(--primary);
+  color: var(--color);
   text-align: center;
+  padding: 5em;
+  padding-top: 1em;
+  height: 100%;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.grid-container {
+  padding: 2em;
+  padding-top: 0;
+  display: flex;
+  justify-content: center;
+  transition: 500ms;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.sider {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  align-items: start;
+  gap: 2em;
+  width: 7em;
+}
+
+.sider-right {
+  display: flex;
+  flex-direction: column;
+  align-items: end;
+  gap: 2em;
+  width: 7em;
+}
+
+.top {
+  display: flex;
+  margin: auto;
+  margin-bottom: 5px;
+}
+
+.toggle-open-button {
+  position: fixed;
+  bottom: 0;
+  right: 0;
+  margin: 4em;
+  margin-bottom: 2em;
+}
+
+/* Button CSS */
+.button {
+  border: none;
+  border-radius: 0.5em;
+  min-width: 3em;
+  height: 2.5em;
+  background-color: #2196f3;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.button:hover {
+  cursor: pointer;
+  background-color: #1070be;
+  transition: 300ms;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+/* Grid CSS */
+.canvas {
+  border-top: 1px solid var(--table-border-secondary);
+  border-bottom: 1px solid var(--table-border-secondary);
+  border-left: 2px solid var(--table-border);
+  border-right: 2px solid var(--table-border);
+}
+
+/* Header CSS */
+.header {
+  display: flex;
+  justify-content: center;
+  color: var(--color);
+  width: 100%;
+  height: 5em;
+  margin-bottom: 2em;
+  margin-top: 2em;
+}
+
+.header-text {
+  font-weight: 600;
+  font-size: 1.75em;
+  transition: 500ms;
+}
+
+/* Legend Value CSS */
+.legend-value-container {
+  display: flex;
+  align-items: center;
+  margin-bottom: -1em;
+}
+
+.box {
+  width: 1.5em;
+  height: 1em;
+  border: 1px solid black;
+  margin-right: 1em;
+}
+
+/* Sidebar CSS */
+.sidebar {
+  position: fixed;
+  z-index: 100;
+  right: 0;
+  top: 0;
+  height: 100%;
+  border-left: 1px solid var(--border);
+  background-color: var(--secondary);
+  transition: 500ms;
+}
+
+.section {
+  margin: 3em;
+  margin-top: 0.25em;
+  display: flex;
+  align-items: start;
+  flex-direction: column;
+}
+
+.toggle-button {
+  position: fixed;
+  bottom: 0;
+  margin: 3em;
+  margin-bottom: 2em;
+}
+
+.settings-content {
+  display: flex;
+}
+
+h3 {
+  margin-bottom: 1.25em;
+}
+
+/* Switch CSS */
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 60px;
+  height: 34px;
+}
+
+/* Hide default HTML checkbox */
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  height: 24px;
+  width: 40px;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+  cursor: pointer;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 16px;
+  width: 16px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+}
+
+input:checked + .slider {
+  background-color: #2196f3;
+}
+
+input:focus + .slider {
+  box-shadow: 0 0 1px #2196f3;
+}
+
+input:checked + .slider:before {
+  -webkit-transform: translateX(16px);
+  -ms-transform: translateX(16px);
+  transform: translateX(16px);
+}
+
+/* Rounded sliders */
+.slider.round {
+  border-radius: 24px;
+}
+
+.slider.round:before {
+  border-radius: 50%;
 }
