--- a/src/App.css
+++ b/src/App.css
@@ -17,9 +17,10 @@
   --table-border-secondary: #cccccc;
 }
 
+html,
 body {
   margin: 0;
-  background-color: var(--primary);
+  height: 100%;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
@@ -33,7 +34,7 @@ body {
   text-align: center;
   padding: 5em;
   padding-top: 1em;
-  height: 100%;
+  height: 100vh;
 }
 
 .grid-container {
