--- a/src/App.css
+++ b/src/App.css
@@ -20,7 +20,7 @@
 html,
 body {
   margin: 0;
-  height: 100%;
+  height: 100vh;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
@@ -42,29 +42,45 @@ body {
   padding-top: 0;
   display: flex;
   justify-content: center;
+  flex-direction: column;
   transition: 500ms;
 }
 
-.sider {
+.row-headers {
+  margin-top: -0.5em;
   display: flex;
   flex-direction: column;
   align-items: start;
-  gap: 2em;
+  gap: 1.81em;
   width: 7em;
 }
 
-.sider-right {
+.row-headers-right {
+  margin-top: -0.5em;
   display: flex;
   flex-direction: column;
   align-items: end;
-  gap: 2em;
+  gap: 1.81em;
   width: 7em;
 }
 
-.top {
+.grid {
   display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.column-headers {
+  position: sticky;
+  top: 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+  margin-bottom: 2em;
   margin: auto;
-  margin-bottom: 5px;
+  padding: 0.5em;
+  font-weight: bold;
+  background-color: var(--primary);
 }
 
 .toggle-open-button {
@@ -126,7 +142,7 @@ body {
 .box {
   width: 1.5em;
   height: 1em;
-  border: 1px solid black;
+  border: 1px solid var(--border);
   margin-right: 1em;
 }
 
@@ -261,12 +277,13 @@ input:checked + .slider:before {
 .tooltip-element {
   position: absolute;
   top: 2em;
-  width: 10em;
-  min-height: 2em;
+  min-width: 8em;
+  min-height: 1.75em;
   background-color: var(--table-border-secondary);
   border: 1px solid var(--table-border);
   color: var(--secondary);
   padding: 0.25em;
+  padding-top: 0.5em;
 }
 
 .tooltip:hover .tooltip-container {
