--- a/src/App.css
+++ b/src/App.css
@@ -34,7 +34,6 @@ body {
   text-align: center;
   padding: 5em;
   padding-top: 1em;
-  height: 100vh;
 }
 
 .grid-container {
@@ -47,7 +46,6 @@ body {
 }
 
 .row-headers {
-  margin-top: -0.5em;
   display: flex;
   flex-direction: column;
   align-items: start;
@@ -56,7 +54,6 @@ body {
 }
 
 .row-headers-right {
-  margin-top: -0.5em;
   display: flex;
   flex-direction: column;
   align-items: end;
@@ -76,7 +73,6 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: flex-end;
-  margin-bottom: 2em;
   margin: auto;
   padding: 0.5em;
   font-weight: bold;
@@ -113,6 +109,8 @@ body {
   border-bottom: 1px solid var(--table-border-secondary);
   border-left: 2px solid var(--table-border);
   border-right: 2px solid var(--table-border);
+  margin: 1em;
+  margin-top: 0.5em;
 }
 
 /* Header CSS */
