--- a/src/App.css
+++ b/src/App.css
@@ -36,13 +36,23 @@ body {
   padding-top: 1em;
 }
 
+.content-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .grid-container {
+  position: relative;
   padding: 2em;
   padding-top: 0;
   display: flex;
   justify-content: center;
+  align-items: flex-start;
   flex-direction: column;
   transition: 500ms;
+  max-width: 1500px;
+  overflow-x: auto;
 }
 
 .row-headers {
