--- a/src/App.css
+++ b/src/App.css
@@ -51,44 +51,26 @@ body {
   align-items: flex-start;
   flex-direction: column;
   transition: 500ms;
-  max-width: 1500px;
+  max-width: 1200px;
   overflow-x: auto;
-}
-
-.row-headers {
-  display: flex;
-  flex-direction: column;
-  align-items: start;
-  gap: 1.81em;
-  width: 7em;
-}
-
-.row-headers-right {
-  display: flex;
-  flex-direction: column;
-  align-items: end;
-  gap: 1.81em;
-  width: 7em;
 }
 
 .grid {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: center;
-}
-
-.column-headers {
-  position: sticky;
-  top: 0;
-  margin: auto;
-  font-weight: bold;
+  align-items: center;
 }
 
 .column-container {
-  position: relative;
+  display: flex;
+  align-items: flex-end;
+  position: sticky;
+  top: 0;
   background-color: var(--primary);
   top: 1em;
-  margin-top: -1em;
+  width: 100%;
+  font-weight: bold;
 }
 
 .toggle-open-button {
@@ -128,8 +110,7 @@ body {
 
 /* Grid CSS */
 .canvas {
-  margin: 1em;
-  margin-top: 2em;
+  margin-top: 1em;
 }
 
 /* Header CSS */
