--- a/src/App.css
+++ b/src/App.css
@@ -120,7 +120,7 @@ body {
   color: var(--color);
   width: 100%;
   height: 5em;
-  margin-bottom: 2em;
+  margin-bottom: 1em;
   margin-top: 2em;
 }
 
@@ -158,11 +158,14 @@ body {
   border-left: 1px solid var(--border);
   background-color: var(--secondary);
   height: 100%;
+  padding-top: 2em;
 }
 
 .section {
   margin: 3em;
+  margin-left: 2em;
   margin-top: 0.25em;
+  margin-bottom: 0;
   display: flex;
   align-items: start;
   flex-direction: column;
@@ -183,7 +186,8 @@ body {
 }
 
 h3 {
-  margin-bottom: 1.5em;
+  margin-bottom: 1em;
+  cursor: pointer;
 }
 
 /* Switch CSS */
@@ -324,8 +328,8 @@ input:checked + .slider:before {
 }
 
 .error {
-  font-size: 1.5em;
-  color: rgb(224, 12, 12);
+  font-size: 1.25em;
+  color: var(--color);
   height: 100vh;
 }
 
