--- a/src/App.css
+++ b/src/App.css
@@ -26,6 +26,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  overflow: hidden;
 }
 
 .App {
@@ -47,12 +48,12 @@ body {
   padding: 2em;
   padding-top: 0;
   display: flex;
-  justify-content: center;
   align-items: flex-start;
   flex-direction: column;
   transition: 500ms;
-  overflow-x: auto;
+  overflow: auto;
   background-color: var(--primary);
+  max-height: 100vh;
 }
 
 .grid {
@@ -69,9 +70,9 @@ body {
   top: 0;
   background-color: var(--primary);
   top: 1em;
-  width: 100%;
   font-weight: bold;
   margin-bottom: 1em;
+  height: 2.5em;
 }
 
 .utility-buttons {
@@ -112,6 +113,7 @@ body {
 /* Grid CSS */
 .canvas {
   margin-top: 1em;
+  margin-bottom: 15em;
 }
 
 /* Header CSS */
@@ -123,6 +125,20 @@ body {
   height: 5em;
   margin-bottom: 1em;
   margin-top: 2em;
+}
+
+.header-elem {
+  position: absolute;
+  background-color: var(--primary);
+  bottom: 5;
+  height: 1.5em;
+}
+
+.cover {
+  position: fixed;
+  height: 2em;
+  background-color: var(--primary);
+  z-index: 50;
 }
 
 .header-text {
