--- a/src/App.css
+++ b/src/App.css
@@ -21,6 +21,7 @@
 
 html,
 body {
+  background-color: var(--primary);
   margin: 0;
   height: 100vh;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
